prodMetadata/src/objects/Partnership_Request__c.object
<CustomObject>
    <fields>
        <fullName>What_Will_Be_Provided_to_IAVA__c</fullName>
        <label>What Will Be Provided to IAVA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsorship Credit</fullName>
                </value>
                <value>
                    <fullName>&quot;In Association With&quot; Credit</fullName>
                </value>
                <value>
                    <fullName>Tickets to Screenings</fullName>
                </value>
                <value>
                    <fullName>DVDs</fullName>
                </value>
                <value>
                    <fullName>Show IAVA PSAs at Screenings</fullName>
                </value>
                <value>
                    <fullName>Include IAVA PSAs on DVDs</fullName>
                </value>
                <value>
                    <fullName>Distribute IAVA Materials - Screenings</fullName>
                </value>
                <value>
                    <fullName>Distribute IAVA Materials - DVDs</fullName>
                </value>
                <value>
                    <fullName>Percentage of Total Revenues</fullName>
                </value>
                <value>
                    <fullName>Promote IAVA on Film Website</fullName>
                </value>
                <value>
                    <fullName>Include IAVA in Other Promo Materials</fullName>
                </value>
                <value>
                    <fullName>Inclusion in Press Outreach</fullName>
                </value>
                <value>
                    <fullName>Participation in Q&amp;A/Discussions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_Has_Ownership_of_the_Film__c</fullName>
        <label>Who Has Ownership of the Film</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Owns_Licensing_Rights__c</fullName>
        <label>Who Owns Licensing Rights to the Film</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Writer__c</fullName>
        <label>Writer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Partnership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Public_Partner_Name__c</columns>
        <columns>Featured_Partner__c</columns>
        <columns>Show_Partner_Logo__c</columns>
        <columns>Show_partner_logo_on_rewards_homepage__c</columns>
        <columns>Organization__c</columns>
        <columns>Number_of_Total_Gives__c</columns>
        <columns>Stage__c</columns>
        <columns>Priority__c</columns>
        <columns>Start_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name_of_Film__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partnership_Request__c.Standard</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Featured_Partner</fullName>
        <columns>NAME</columns>
        <columns>Public_Partner_Name__c</columns>
        <columns>Featured_Partner__c</columns>
        <columns>Organization__c</columns>
        <columns>Number_of_Total_Gives__c</columns>
        <columns>Stage__c</columns>
        <columns>Priority__c</columns>
        <columns>Show_Partner_Logo__c</columns>
        <columns>Start_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Name_of_Film__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Featured_Partner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partnership_Request__c.Standard</value>
        </filters>
        <label>Featured Partner</label>
    </listViews>
    <listViews>
        <fullName>Fine_Arts_Partnership_Reqeusts</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>fine arts</value>
        </filters>
        <label>Fine Arts Partnership Reqeusts</label>
    </listViews>
    <listViews>
        <fullName>Miller_Partnerships</fullName>
        <columns>Organization__c</columns>
        <columns>NAME</columns>
        <columns>Org_Name__c</columns>
        <columns>Public_Partner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>contains</operation>
            <value>miller</value>
        </filters>
        <label>Miller Partnerships</label>
    </listViews>
    <listViews>
        <fullName>Music_Partnership_Requests</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Music</value>
        </filters>
        <label>Music Partnership Requests</label>
    </listViews>
    <listViews>
        <fullName>Partner_signup_form</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Background_on_Organization__c</columns>
        <columns>Currently_Working_with_Veterans__c</columns>
        <columns>Goals_in_Working_with_IAVA__c</columns>
        <columns>Other_Current_Partners__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Show_Partner_Logo__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partnership_Request__c.Standard</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Partner signup form</label>
    </listViews>
    <listViews>
        <fullName>Partnership_Records_created_this_month</fullName>
        <columns>NAME</columns>
        <columns>Org_Name__c</columns>
        <columns>Contact_Information__c</columns>
        <columns>Organization__c</columns>
        <columns>Stage__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Partnership Records created this month</label>
    </listViews>
    <listViews>
        <fullName>Partnerships_created_in_the_last_6_month</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Partner_Category__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <label>Partnerships created in the last 6 month</label>
    </listViews>
    <listViews>
        <fullName>Partnerships_created_this_year</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Partner_Category__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Partnerships created this year</label>
    </listViews>
    <listViews>
        <fullName>Sports_Partnership_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>sports</value>
        </filters>
        <label>Sports Partnership Requests</label>
    </listViews>
    <listViews>
        <fullName>Status_Active_Partnerships</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <columns>Organization__c</columns>
        <columns>Number_of_Total_Gives__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Partnership_Request__c.Standard</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Active Partnership</value>
        </filters>
        <label>Status: Active Partnerships</label>
    </listViews>
    <listViews>
        <fullName>Status_Closed_Rejected</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <columns>Organization__c</columns>
        <columns>Number_of_Total_Gives__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Closed/Rejected</value>
        </filters>
        <label>Status: Closed/Rejected</label>
    </listViews>
    <listViews>
        <fullName>Status_Completed_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <columns>Organization__c</columns>
        <columns>Number_of_Total_Gives__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Inactive/Completed Partnership</value>
        </filters>
        <label>Status: Completed/Inactive</label>
    </listViews>
    <listViews>
        <fullName>Status_IAVA_to_Outreach</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <columns>Organization__c</columns>
        <columns>Number_of_Total_Gives__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>IAVA to Outreach</value>
        </filters>
        <label>Status: IAVA to Outreach</label>
    </listViews>
    <listViews>
        <fullName>Status_Needs_Followup</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Notes__c</columns>
        <columns>Organization__c</columns>
        <columns>Number_of_Total_Gives__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Needs Followup</value>
        </filters>
        <label>Status: Needs Followup</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnerships</pluralLabel>
    <recordTypes>
        <fullName>Film</fullName>
        <active>true</active>
        <description>Use for Film Partnerships</description>
        <label>Film</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Use for all Non-Film Partnerships</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>